<resources>
    <string name="app_name">Android Store Example</string>
    <string name="categories">Categories</string>
    <string name="products">products</string>
    <string name="error_in_fetching_data">Error in Fetching Data</string>
    <string name="error_fetching_data">Error while fetching data</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="basket_item_images">Basket Item Images</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="basket">Basket</string>
    <string name="to_the_basket">To the basket</string>
    <string name="total">Total</string>
    <string name="amount">Amount</string>
    <string name="price_template">£ %1$d</string>
    <string name="checkout">Checkout</string>
    <string name="title_activity_purchase_confirmation">PurchaseConfirmationActivity</string>
</resources>
