<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/basketProductImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/basket_item_images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/hat3" />

    <TextView
        android:id="@+id/basketProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/basketProductImage"
        app:layout_constraintTop_toTopOf="@+id/basketProductImage"
        tools:text="Looooooooooong title" />

    <TextView
        android:id="@+id/number_of_items_text_field"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/price_per_item_textview"
        app:layout_constraintTop_toBottomOf="@+id/price_per_item_textview"
        tools:text="100" />

    <Button
        android:id="@+id/basket_view_decrease_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/basketProductImage"
        app:layout_constraintTop_toBottomOf="@+id/basketProductTitle" />

    <Button
        android:id="@+id/basket_view_increase_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/basket_view_decrease_button"
        app:layout_constraintStart_toEndOf="@+id/basket_view_decrease_button"
        app:layout_constraintTop_toTopOf="@+id/basket_view_decrease_button"/>

    <TextView
        android:id="@+id/price_per_item_textview"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/price_label"
        app:layout_constraintTop_toTopOf="@+id/price_label"
        tools:text="£ 15" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="Price"
        app:layout_constraintStart_toEndOf="@+id/basket_view_increase_button"
        app:layout_constraintTop_toBottomOf="@+id/basketProductTitle" />

    <TextView
        android:id="@+id/amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="@+id/price_label"
        app:layout_constraintTop_toBottomOf="@+id/price_label" />

    <TextView
        android:id="@+id/basket_item_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="@+id/amount_label"
        app:layout_constraintTop_toBottomOf="@+id/amount_label" />

    <TextView
        android:id="@+id/total_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/number_of_items_text_field"
        app:layout_constraintTop_toBottomOf="@+id/number_of_items_text_field"
        android:text="0"
        tools:text="$ 123" />

    <Button
        android:id="@+id/remove_from_basket_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove"
        app:layout_constraintStart_toStartOf="@+id/basket_view_decrease_button"
        app:layout_constraintTop_toBottomOf="@+id/total_text_view" />
</android.support.constraint.ConstraintLayout>